--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -1,3 +1,30 @@
 ---
-
+import HomeIcon from '../icons/Home.astro'
+import LibraryIcon from '../icons/Library.astro'
+import SearchIcon from '../icons/Search.astro'
+import SideMenuItem from './SideMenuItem.astro'
 ---
+
+<nav class="flex flex-col flex-1 gap-2">
+  <div class="bg-zinc-900 rounded-lg p-2">
+    <ul>
+      <SideMenuItem href="/">
+        <HomeIcon />
+        Inicio
+      </SideMenuItem>
+      <SideMenuItem href="/#">
+        <SearchIcon />
+        Buscar
+      </SideMenuItem>
+    </ul>
+  </div>
+
+  <div class="bg-zinc-900 rounded-lg p-2">
+    <ul>
+      <SideMenuItem href="/#">
+        <LibraryIcon />
+        Biblioteca
+      </SideMenuItem>
+    </ul>
+  </div>
+</nav>
