--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -1,8 +1,11 @@
 ---
-import HomeIcon from '../icons/Home.astro'
-import LibraryIcon from '../icons/Library.astro'
-import SearchIcon from '../icons/Search.astro'
+import HomeIcon from '@/icons/Home.astro'
+import LibraryIcon from '@/icons/Library.astro'
+import SearchIcon from '@/icons/Search.astro'
 import SideMenuItem from './SideMenuItem.astro'
+import SideMenuCard from './SideMenuCard.astro'
+
+import { playlists } from '@/lib/data'
 ---
 
 <nav class="flex flex-col flex-1 gap-2">
@@ -25,6 +28,8 @@ import SideMenuItem from './SideMenuItem.astro'
         <LibraryIcon />
         Biblioteca
       </SideMenuItem>
+
+      {playlists.map((playlist) => <SideMenuCard playlist={playlist} />)}
     </ul>
   </div>
 </nav>
