--- a/src/components/SideMenuCard.astro
+++ b/src/components/SideMenuCard.astro
@@ -1,6 +1,5 @@
 ---
 import type { Playlist } from '@/lib/data'
-import { globalContentConfigObserver } from 'node_modules/astro/dist/content/utils'
 
 interface Props {
   playlist: Playlist
@@ -15,9 +14,21 @@ const artistsString = artists.join(', ')
 
 <a
   href={`/playlist/${id}`}
-  class="playlist-item flex relative p-2 overflow-hidden items-center gap-5 rounded-md hover:bg-zinc-500"
+  class="playlist-item flex relative p-2 overflow-hidden items-center gap-5 rounded-md hover:bg-zinc-800"
 >
   <picture class="h-12 w-12 flex-none">
-    <img src={cover != '' ? cover : '/assets/default-cover.png'} />
+    <img
+      src={cover != '' ? cover : '/assets/default-cover.png'}
+      alt=`Cover of ${title} by ${artistsString}`
+      class="object-cover w-full h-full rounded-md"
+    />
   </picture>
+  <div class="flex flex-auto flex-col truncate">
+    <h4 class="text-white text-sm">
+      {title}
+    </h4>
+    <span class="text-xs text-gray-400">
+      {artistsString}
+    </span>
+  </div>
 </a>
