--- a/src/components/PlayListItemCard.astro
+++ b/src/components/PlayListItemCard.astro
@@ -14,21 +14,23 @@ const artistsString = artists.join(', ')
 
 <a
   href={`/playlist/${id}`}
-  class="playlist-item transition-all duration-300 flex relative p-2 overflow-hidden gap-2 pb-6 rounded-md hover:bg-zinc-800 shadow-lg hover:shadow-xl bg-zinc-500 w-44 flex-col"
+  class="playlist-item transition-all duration-300 flex relative p-2 overflow-hidden gap-2 pb-6 rounded-md w-44 flex-col"
   transition:name=`playlist ${id} box`
 >
   <picture class="aspect-square w-full h-auto flex-none">
     <img
       src={cover != '' ? cover : '/assets/default-cover.png'}
-      alt=`Cover of ${title} by ${artistsString}`
+      alt={`Cover of ${title} by ${artistsString}`}
       class="object-cover w-full h-full rounded-md"
       transition:name=`playlist ${id} image`
     />
   </picture>
+
   <div class="flex flex-auto flex-col px-2">
     <h4 class="text-white text-sm" transition:name=`playlist ${id} title`>
       {title}
     </h4>
+
     <span
       class="text-xs text-gray-400"
       transition:name=`playlist ${id} artists`
