--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,8 @@
 ---
-import { ViewTransitions, slide } from 'astro:transitions'
+import { ViewTransitions } from 'astro:transitions'
 
 import AsideMenu from '../components/AsideMenu.astro'
+import { Player } from '@/components/Player'
 
 interface Props {
   title: string
@@ -30,7 +31,9 @@ const { title } = Astro.props
         <slot />
       </main>
 
-      <footer class="[grid-area:player] min-h-[100px]"></footer>
+      <footer class="[grid-area:player] min-h-[100px]">
+        <Player />
+      </footer>
     </div>
     <style>
       #app {
